second commit, alteração na localização do index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafio HTML</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -18,11 +18,11 @@
   </header>
 
   <div class="menu">
-    <a id="pages" href="glossary.html">GLOSSÁRIO</a>
-    <a id="pages" href="contact.html">FORMULÁRIO DE CONTATO</a>
-    <a id="pages" href="shopping-list.html">LISTA DE COMPRAS</a>
-    <a id="pages" href="quiz.html">QUIZ</a>
-    <a id="pages" href="blog-post.html">BLOG POST</a>
+    <a id="pages" href="/pages/glossary.html">GLOSSÁRIO</a>
+    <a id="pages" href="/pages/contact.html">FORMULÁRIO DE CONTATO</a>
+    <a id="pages" href="/pages/shopping-list.html">LISTA DE COMPRAS</a>
+    <a id="pages" href="/pages/quiz.html">QUIZ</a>
+    <a id="pages" href="/pages/blog-post.html">BLOG POST</a>
   </div>
 
   <div class="contact">
