--- a/pages/blog-post.html
+++ b/pages/blog-post.html
@@ -15,7 +15,7 @@
       <h1 id="title">Manifesto Comunista</h1>
     </div>
     <nav class="links-blog-post">
-      <a id="links-blog" href="index.html">HOME</a>
+      <a id="links-blog" href="../index.html">HOME</a>
       <a id="links-blog" href="#">SOBRE</a>
       <a id="links-blog" href="#">CONTATO</a>
     </nav>
