--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -15,7 +15,7 @@
       <h1 id="title">Quiz sobre HTML</h1>
     </div>
   </header>
-  <a id="back" href="index.html">INÍCIO</a>
+  <a id="back" href="../index.html">INÍCIO</a>
   <!--Header padrão e botão de inicio igual todas as paginas-->
   <div class="quiz-list">
     <ol>
