--- a/pages/shopping-list.html
+++ b/pages/shopping-list.html
@@ -15,7 +15,7 @@
       <h1 id="title">Lista de compras</h1>
     </div>
   </header>
-  <a id="back" href="index.html">INÍCIO</a>
+  <a id="back" href="../index.html">INÍCIO</a>
 
 
 
