--- a/pages/glossary.html
+++ b/pages/glossary.html
@@ -15,7 +15,7 @@
       <h1 id="title">Glossário</h1>
     </div>
   </header>
-  <a id="back" href="index.html">INÍCIO</a>
+  <a id="back" href="../index.html">INÍCIO</a>
 
   <div class="content">
     <dl id="glossary">
