--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafio HTML</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -18,18 +18,18 @@
   </header>
 
   <div class="menu">
-    <a id="pages" href="/pages/glossary.html">GLOSSÁRIO</a>
-    <a id="pages" href="/pages/contact.html">FORMULÁRIO DE CONTATO</a>
-    <a id="pages" href="/pages/shopping-list.html">LISTA DE COMPRAS</a>
-    <a id="pages" href="/pages/quiz.html">QUIZ</a>
-    <a id="pages" href="/pages/blog-post.html">BLOG POST</a>
+    <a id="pages" href="./pages/glossary.html">GLOSSÁRIO</a>
+    <a id="pages" href="./pages/contact.html">FORMULÁRIO DE CONTATO</a>
+    <a id="pages" href="./pages/shopping-list.html">LISTA DE COMPRAS</a>
+    <a id="pages" href="./pages/quiz.html">QUIZ</a>
+    <a id="pages" href="./pages/blog-post.html">BLOG POST</a>
   </div>
 
   <div class="contact">
-    <a target="_blank" href="https://github.com/Pelety"><img src="../assets/github_icon.svg" alt="github Pelety"></a>
-    <a target="_blank" href="https://www.instagram.com/yago_pelet/"><img src="../assets/instagram_icon.svg" alt="instagram yago_pelet"></a>
-    <a target="_blank" href="https://www.linkedin.com/in/yagomoreirapsoares/"><img src="../assets/linkedin_icon.svg" alt="linkedin yagomoreirapsoares"></a>
-    <a target="_blank" href="https://twitter.com/ympsoares"><img src="../assets/twitter_bird_icon.svg" alt="twiter ympsoares"></a>
+    <a target="_blank" href="https://github.com/Pelety"><img src="./assets/github_icon.svg" alt="github Pelety"></a>
+    <a target="_blank" href="https://www.instagram.com/yago_pelet/"><img src="./assets/instagram_icon.svg" alt="instagram yago_pelet"></a>
+    <a target="_blank" href="https://www.linkedin.com/in/yagomoreirapsoares/"><img src="./assets/linkedin_icon.svg" alt="linkedin yagomoreirapsoares"></a>
+    <a target="_blank" href="https://twitter.com/ympsoares"><img src="./assets/twitter_bird_icon.svg" alt="twiter ympsoares"></a>
   </div>
 
 </body>
